add_subdirectory(demo)
add_subdirectory(demo2)
add_subdirectory(wxDemo)
add_subdirectory(dpidemo)
add_subdirectory(fun_test)
add_subdirectory(SoTool)
add_subdirectory(gridctrl_demo)

if (TARGET httpclient)
add_subdirectory(wallpaper)
endif()
if(NOT CMAKE_SYSTEM_NAME MATCHES Darwin)
#darwin不支持ipc
add_subdirectory(ipcdemo)
if(NOT MINGW)
add_subdirectory(SouiEditor)
endif()
endif()