add_subdirectory(demo)
add_subdirectory(demo2)
add_subdirectory(wxDemo)
add_subdirectory(dpidemo)
add_subdirectory(fun_test)
add_subdirectory(SoTool)
add_subdirectory(gridctrl_demo)
add_subdirectory(hellocharts_demo)
add_subdirectory(mclistview_demo)
if (TARGET httpclient)
add_subdirectory(wallpaper)
endif()
add_subdirectory(uieditor)
if(NOT CMAKE_SYSTEM_NAME MATCHES Darwin)
#darwin不支持ipc
add_subdirectory(ipcdemo)
endif()