
if(NOT CMAKE_SYSTEM_NAME MATCHES "Windows")
# GCC/Clang需要未知无关代码
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIE")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIE")
endif()

add_subdirectory(demo)
add_subdirectory(demo2)
add_subdirectory(wxDemo)
add_subdirectory(dpidemo)
add_subdirectory(fun_test)
add_subdirectory(SoTool)
add_subdirectory(gridctrl_demo)
add_subdirectory(hellocharts_demo)
add_subdirectory(lightbutton_demo)
add_subdirectory(propanimator_demo)
add_subdirectory(mclistview_demo)
add_subdirectory(flowlayout_demo)
if (TARGET httpclient)
add_subdirectory(wallpaper)
endif()
add_subdirectory(uieditor)
if(NOT CMAKE_SYSTEM_NAME MATCHES Darwin)
#darwin不支持ipc
add_subdirectory(ipcdemo)
endif()